# github-portfolio-search

./: .claude-output.txt  .env.example  .gitignore  .venv  AGENT_BRIEF.md  CLAUDE.md  Makefile  README.md  SPRINT_BRIEF.md  Sprint-Notes.md  dashboard.json  deploy.sh  portfolio.json  pyproject.toml
.github/workflows/: reindex.yml
.sprint/: config.sh
.sprint/history/: deploy-log.jsonl  sprint-1-brief.md  sprint-10-brief.md  sprint-11-brief.md  sprint-16-brief.md  sprint-17-brief.md  sprint-18-brief.md  sprint-3-brief.md  sprint-4-brief.md  sprint-5-brief.md  sprint-7-brief.md  sprint-8-brief.md  sprint-9-brief.md
.sprint/scripts/: sprint-init.sh  sprint-parse.sh  sprint-run.sh
docs/lifecycle/: PLAN-2026-03-21.md  PLAN.md  ROADMAP.md  VISION-2026-03-21.md
docs/project-memory/backlog/: README.md
docs/project-memory/sessions/: S-2026-03-22-0501-github-api-client.md  S-2026-03-22-0501-search-cli.md  S-2026-03-22-0505-embedding-store.md  (+37 more)
docs/seed/: browsing-and-ui-patterns.md  discovery-github-portfolio.md  interfaces-and-access.md  use-cases.md
lambda/github_oauth/: handler.py
lambda/signin_log/: handler.py
scripts/: approve-access.py  generate-sample-data.py  index-and-export.sh  reindex.sh
src/ghps/: __init__.py  analytics.py  api.py  auth.py  cli.py  clusters.py  embeddings.py  export.py  github_client.py  indexer.py  mcp_server.py  notifications.py  search.py  store.py
tests/: conftest.py  test_analytics.py  test_api.py  test_api_no_index.py  test_auth.py  test_cli.py  test_data_pipeline.py  test_deploy.py  test_e2e.py  test_embeddings.py  test_export.py  test_github_client.py  test_integration.py  test_mcp.py  test_notifications.py  test_search.py  test_smoke.py  test_store.py  test_topic_extraction.py  test_web_playwright.py
web/: config.json  deploy-manifest.json  embed.html  health.json  index.html  robots.txt  sitemap.xml
web/css/: style.css
web/data/: clusters.json  repos.json  search-index.json  similarity.json  suggestions.json
web/js/: app.js  auth.js  collections.js  d3-viz.js  export.js  search.js
