[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghps"
version = "0.1.0"
description = "GitHub Portfolio Search — index and search GitHub repos with embeddings"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "sentence-transformers>=2.2",
    "sqlite-vec>=0.1.1",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "scikit-learn>=1.4",
]

[project.scripts]
ghps = "ghps.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ghps-server = "ghps.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
